# schwab-cli-tools

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
config/: CLAUDE.md  __init__.py  accounts.schema.json  accounts.template.json  policy.template.json  secure_account_config.py
docs/: _solutions.md  account-config.md  advisor-sidecar.md  architecture.md  history.md
schemas/: doctor.json  envelope.json  portfolio.json
scripts/: check_quality_budget.py  prepare_ml_data.py  verify_agent_cli.py
src/core/: __init__.py  advisor.py  advisor_models.py  advisor_prompts.py  advisor_scoring.py  advisor_sidecar.py  brief_analysis.py  brief_render.py  brief_scorecard.py  brief_service.py  brief_types.py  context.py  context_models.py  errors.py  json_types.py  lynch_service.py  market_service.py  models.py  policy.py  polymarket.py  portfolio_service.py  price_data.py  prompts.py  score_service.py  snapshot_service.py
src/schwab_client/: __init__.py  advisor_cli.py  auth.py  auth_cli.py  auth_tokens.py  cli.py  client.py  history.py  market_auth.py  paths.py  runtime_env.py  secure_files.py  snapshot.py
src/schwab_client/_advisor/: __init__.py  schema.py  store.py
src/schwab_client/_client/: __init__.py  common.py  portfolio.py  protocols.py  trading.py
src/schwab_client/_history/: __init__.py  advisor_schema.py  advisor_store.py  brief_store.py  normalizer.py  schema.py  snapshot_writers.py  store.py
src/schwab_client/cli/: __init__.py  __main__.py  context.py  output.py  parser.py  router.py
src/schwab_client/cli/commands/: __init__.py  admin.py  advisor_cmd.py  brief_cmd.py  context_cmd.py  history.py  market.py  portfolio.py  report.py  trade.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_client.py
tests/unit/: test_advisor.py  test_advisor_cli.py  test_advisor_scoring.py  test_advisor_service.py  test_advisor_store.py  test_api_client.py  test_auth.py  test_brief_cli.py  test_brief_scorecard.py  test_brief_service.py  test_brief_store.py  test_cli.py  test_context.py  test_history.py  test_json_schema.py  test_new_features.py  test_policy.py  test_portfolio_service.py  test_secure_config.py  test_secure_files.py  test_snapshot_command.py
