[project]
name = "schwab-cli-tools"
version = "0.2.0"
description = "Schwab CLI tools for portfolio analysis, market insights, and trading"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Schwab CLI Tools Maintainers" }
]
license = { text = "MIT" }
keywords = ["finance", "portfolio", "schwab", "trading", "cli", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
    "schwab-py>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "ipython>=8.31.0",
    "jsonschema>=4.20.0",
    "argcomplete>=3.2.0",
    "rich>=13.7.0",
]

[project.scripts]
schwab = "src.schwab_client.cli:main"
schwab-auth = "src.schwab_client.auth_cli:main"
schwab-market-auth = "src.schwab_client.market_auth:main"

[project.urls]
Homepage = "https://github.com/amadad/schwab-cli-tools"
Repository = "https://github.com/amadad/schwab-cli-tools.git"
Documentation = "https://github.com/amadad/schwab-cli-tools#readme"
Issues = "https://github.com/amadad/schwab-cli-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "schwab.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
